@@ -3,3 +3,4 @@ v.3.1.3
 - Updated Astro, Crimson, Gold Armor textures
 - New Sounds Thanks to Also Yellow
 - New Music Discs Thanks to Also Yellow
+- Unmaykr Firing Sound Thanks to Also Yellow
